# game-library

./: .gitignore  CMakeLists.txt
examples/: fragment.glsl  main.cpp
include/glad/: glad.h
src/: core.cpp  glad.c
src/camera/: camera.cpp
src/core/: Application.cpp  Window.cpp
src/math/: Transform.cpp  mat4.cpp  vec2.cpp  vec3.cpp  vec4.cpp
src/renderer/: ElementBuffer.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp
src/renderer/opengl/: OpenGLContext.cpp  OpenGLRendererAPI.cpp
src/renderer/opengl/api/: OpenGLRendererAPI.cpp  RenderCommand.cpp
